--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
   </head>
   <body>
-    <a-scene mindar-image="imageTargetSrc: ./targets5.mind" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" embedded>
+    <a-scene mindar-image="imageTargetSrc: ./targets5.mind" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
         <!-- Add the video asset here, ensure autoplay is off initially -->
         <video id="video" src="vid2.mp4" crossorigin="anonymous" playsinline></video>
